# imery

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pyodide-demo.yml
demo/classic/: app.yaml  demo.yaml  widgets.yaml
demo/hello-imgui/: app.yaml  data.yaml  hello-imgui-widgets.yaml  widgets.yaml
demo/hello-imgui-full/: app.yaml  data.yaml  hello-imgui-widgets.yaml  widgets.yaml
demo/hello-imgui-full/examples/: imguizmo-demo.yaml  implot-demo.yaml  markdown-demo.yaml  matplotlib-demo.yaml  property-editor.yaml  text-editor-demo.yaml  widgets-demo.yaml
demo/hello-imgui-full/widgets/: basic.yaml  bullets.yaml  colors.yaml  combos.yaml  drags.yaml  images.yaml  layout.yaml  listboxes.yaml  popups.yaml  selectables.yaml  tables.yaml  tabs.yaml  text.yaml  tooltips.yaml  trees.yaml
docs/: README.md  build.md  imery-lang.md  index.html
docs/demo/: styles.css
docs/demo/js/: pyodide_loader.js
docs/design/: widgets.md
docs/examples/: examples.json
docs/js/: examples.js  main.js  pyodide_loader.js
docs/pyodide_dist/: manifest.json
docs/tmp/: providers-metadata.md
scripts/: aggregate_demo_yaml.py  bump_version.py  hatch_build.py  run
src/imery/: __init__.py  __main__.py  app.py  data_bag.py  dispatcher.py  lang.py  stringcase.py  types.py
src/imery/backend/: audio_buffer.py  data_tree.py  decorators.py  kernel.py  simple_data_tree.py  types.py
src/imery/editor/layouts/: app.yaml  data.yaml  menu.yaml
src/imery/frontend/: composite.py  decorators.py  types.py  widget.py  widget_factory.py
(+30 files in other folders)
